@@ -14,7 +14,9 @@
 
 <p><jwc id="insertMatchCount"/> books.
 
-<jwc id="ifShowHeader">
+<jwc id="ifBooks">
+<jwc id="browser">
+
 <table>
 	<tr>
 		<th>Title</th>
@@ -22,10 +24,8 @@
 		<th>Publisher</th>
 		<th>Borrowed By</th>
 	</tr>
-</jwc>
 
-<jwc id="e-match">
-
+<jwc id="e">
 	<tr>
 		<td><jwc id="bookLink"/></td>
 		<td><jwc id="insertAuthor"/></td>
@@ -37,13 +37,11 @@
 		</td>
 		<td><jwc id="borrow"/></td>
 	</tr>
-
 </jwc>
 
-<jwc id="ifShowTrailer">
 </table>
+
 </jwc>
-
-
+</jwc>
 
 </jwc>
